se crean archivos desde un configuration y sin rutas fijas